2006-08-16 Mauro Tortonesi <mauro@deepspace6.net>

	* Don't call warn_socket_details from callback_proxy unless verbose
	mode is on. Bug reported by David Malone <dwmalone@maths.tcd.ie>.

2006-01-20 Chris Leishman <chris@leishman.org>

	* Fixed a bug in listen (missing AI_PASSIVE flag)
	* Updated NEWS
	* Updated copyright notices for 2006.
	* Released nc6 1.0

2006-01-14 Chris Leishman <chris@leishman.org>

	* Converted to use autopoint for i18n source
	  (merged from autopoint_test branch)

2006-01-14 Mauro Tortonesi <mauro@deepspace6.net>

	* Fixed a segv in the bluez code (null local address)

2005-08-18 Chris Leishman <chris@leishman.org>

	* Moved afindep and bluez network code to separate modules with very
	  generic interfaces and refactored to create functions for common
	  code.  The bluez code now uses a similar approach to afindep.
	* Reworking of warnings and other messages to simplify and reduce the
	  number of strings for translation.
	* Made parameter checking more resilient and now always includes
	  arguments for optional components (such as bluetooth), but now gives
	  an appropriate error if used.
	* Updated man page with bluetooth options.
	* Created a system.h header for system specific defines, which
	  includes autoconfs config.h.
	* Changed boolean types to use stdbool.h (where available)
	* Fixed typedefs to use *_t for the typedef symbol, not the original
	  struct name.
	* Extensive code cleanup to prepare for a release.
	* Add -X and --rev-transfer options (reverse transfer).
	* Updated copyright notices for 2005.

2005-07-22 Chris Leishman <chris@leishman.org>
	
	* Fixed --transfer example in man page.

2005-05-19 Chris Leishman <chris@leishman.org>
	
	* Corrected --no-reuseaddr handling (it was inverted).

2004-04-19 Mauro Tortonesi <mauro@deepspace6.net>

	* Updated i18n subsystem to gettext 0.14.1

2004-01-23 Mauro Tortonesi <mauro@deepspace6.net>

	* Added configuration time detection of Bluez.
