@@ -35,19 +35,14 @@
 #include <unistd.h>
 #include <limits.h>
 
-RCSID("@(#) $Header: /Users/cleishma/work/nc6-repo/nc6/src/afindep.c,v 1.4 2006-01-19 22:46:23 chris Exp $");
+RCSID("@(#) $Header: /Users/cleishma/work/nc6-repo/nc6/src/afindep.c,v 1.4.2.1 2008-06-20 04:28:16 chris Exp $");
 
-
-/* suggested size for argument to getnameinfo_ex */
-static const int AI_STR_SIZE = (2 * (NI_MAXHOST + NI_MAXSERV + 2)) + 8;
 
 
 static bool skip_address(const struct addrinfo *ai);
 #ifdef ENABLE_IPV6
 static struct addrinfo *order_ipv6_first(struct addrinfo *ai);
 #endif
-static void getnameinfo_ex(const struct sockaddr *sa, socklen_t len, char *str,
-		size_t size, bool numeric_mode);
 static bool is_allowed(const struct sockaddr *sa, socklen_t salen,
 		const struct addrinfo *hints,
 		const char *address, const char *service);
@@ -661,50 +656,6 @@ static struct addrinfo *order_ipv6_first(struct addrinfo *ai)
 	return ai;
 }
 #endif
-
-
-
-static void getnameinfo_ex(const struct sockaddr *sa, socklen_t len, char *str,
-		size_t size, bool numeric_mode)
-{
-	int err;
-	char hbuf_rev[NI_MAXHOST + 1];
-	char hbuf_num[NI_MAXHOST + 1];
-	char sbuf_rev[NI_MAXSERV + 1];
-	char sbuf_num[NI_MAXSERV + 1];
-
-	/* check arguments */
-	assert(sa != NULL);
-	assert(len > 0);
-	assert(str != NULL);
-	assert(size > 0);
-	
-	/* get the numeric name for this destination as a string */
-	err = getnameinfo(sa, len, hbuf_num, sizeof(hbuf_num),
-			  sbuf_num, sizeof(sbuf_num),
-			  NI_NUMERICHOST | NI_NUMERICSERV);
-
-	/* this should never happen */
-	if (err != 0)
-		fatal("getnameinfo failed: %s", gai_strerror(err));
-
-	if (numeric_mode == false) {
-		/* get the real name for this destination as a string */
-		err = getnameinfo(sa, len, hbuf_rev, sizeof(hbuf_rev),
-				  sbuf_rev, sizeof(sbuf_rev), 0);
-		if (err == 0) {
-			snprintf(str, size, "%s (%s) %s [%s]", hbuf_rev, 
-			         hbuf_num, sbuf_num, sbuf_rev);
-		} else {
-			warning(_("inverse lookup failed for %s: %s"),
-			        hbuf_num, gai_strerror(err));
-			
-			snprintf(str, size, "%s %s", hbuf_num, sbuf_num);
-		}
-	} else {
-		snprintf(str, size, "%s %s", hbuf_num, sbuf_num);
-	}
-}
 
 
 
